--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -150,7 +150,7 @@
                           <text value="Presets"/>
                         </properties>
                       </component>
-                      <component id="a9f19" class="javax.swing.JComboBox" binding="sizeComboBox">
+                      <component id="a9f19" class="javax.swing.JComboBox" binding="sizePresetComboBox">
                         <constraints/>
                         <properties>
                           <focusable value="false"/>
@@ -437,7 +437,7 @@
                           <text value="Presets"/>
                         </properties>
                       </component>
-                      <component id="68d78" class="javax.swing.JComboBox" binding="dimensionComboBox">
+                      <component id="68d78" class="javax.swing.JComboBox" binding="rangePresetComboBox">
                         <constraints/>
                         <properties>
                           <focusable value="false"/>
@@ -501,7 +501,7 @@
               <text value="&lt;HTML&gt;&lt;U&gt;Settings&lt;/U&gt;&lt;/HTML&gt;"/>
             </properties>
           </component>
-          <grid id="45826" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="45826" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="5" left="5" bottom="5" right="5"/>
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -511,7 +511,7 @@
             <children>
               <component id="d5cc0" class="javax.swing.JSlider" binding="previewZSlider">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <focusable value="false"/>
@@ -526,7 +526,7 @@
               </component>
               <component id="2bdb8" class="javax.swing.JLabel" binding="currentSliceLabel">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <focusable value="false"/>
@@ -537,7 +537,7 @@
               <grid id="e6edf" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -568,7 +568,7 @@
               </grid>
               <component id="de3f8" class="javax.swing.JLabel" binding="preview">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <alignmentX value="0.5"/>
@@ -577,6 +577,16 @@
                   <text value=""/>
                 </properties>
               </component>
+              <vspacer id="19c6f">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+              <vspacer id="f2ca2">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
         </children>
@@ -793,7 +803,7 @@
                       <grid row="0" column="3" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
-                    <border type="none"/>
+                    <border type="etched"/>
                     <children>
                       <component id="e0436" class="javax.swing.JCheckBox" binding="normalizeCheckBox">
                         <constraints>
